--- a/parallaxprj.html
+++ b/parallaxprj.html
@@ -92,7 +92,14 @@
         
     </Section>
 
-   
+    <section class="section-4">
+        <div>
+            <h2>
+                Follow!!
+            </h2>
+            <p>
+                the best css course ever !!
+            </p>
         </div>
     </section>
 </body>
