--- a/units/index.html
+++ b/units/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Units</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
-    <h1>CSS </h1>
-    <p>
-      fjsdlkfjsdkf sdfkjsdf asdfkl dksfjasdfk adsf;k sdkjdf as;dkfljsd lkdsjf sdfjds 
-    </p>
-    <div class="parent">
-      <ul>
-        <li>This is Text</li>
-        <li>This is Text</li>
-        <li>This is Text</li>
-        <li>This is Text</li>
-      </ul>
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>units</title>
+    <style>
+        h1{
+            font-size: 1px;
+        }
+        #one{
+            font-size: 50px;
+        }
+        #two{
+            font-size: 100px;
+        }
+        #three{
+            font-size: 150px;
+        }
+    </style>
+</head>
+<body>
+    <h1> heading1</h1>
+    <p id="one">para1</p>
+    <p id="two">para2</p>
+    <p id="three">para3</p>
+</body>
 </html>
