--- a/margin/index.html
+++ b/margin/index.html
@@ -12,9 +12,9 @@
             border: 0.8px dotted chocolate;
             padding: 15px;
             border-radius: 15px;
-            margin-top: 30px;
+            margin: 10px 20px 30px 40px;
         }
-        #two{
+         #two{
             height: 200px;
             width: 200px;
             background-color: beige;
@@ -31,13 +31,14 @@
             border: 0.8px dotted chocolate;
             padding: 15px;
             border-radius: 15px;
+            margin-top: 30px;
+
         }
     </style>
 </head>
 <body>
-    <div id="one"> First Div</div>
+    <div id="one"> First Div</div>    
     <div id="two"> Second Div</div>
-    <br>
     <div id="three"> Third Div </div>
 </body>
 </html>
