--- a/relative units/em.html
+++ b/relative units/em.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>relative-units</title>
+    <title>relavtive-em</title>
     <style>
         #box1{
             height: 100px;
             width: 100px;
-            background-color: green;
+            border: 2px solid black;
+            font-size: 10px;
         }
         #box2{
             height: 50px;
-            width: 30%;
-            background-color: gold;
+            width: 50%;
+            border: 2px solid black;
+            font-size: 2em;
+            width: 5em;
         }
+
+        
     </style>
 </head>
 <body>
     <div id="box1">
-        <div id="box2"> 
-
-        </div>
+        box1 
+        <div id="box2">box2</div>
     </div>
-    
 </body>
 </html>
