--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -15,7 +15,7 @@
             display: inline-block;
         }
         #container{
-            width: 600px;
+            width: 700px;
             height: 300px;
             display: flex;
             flex-direction:row;
@@ -26,13 +26,14 @@
         }
         #box1{
             background-color: violet;
+            flex-grow: 2;
 
            
         }
         #box2{
             background-color: blue;
             height: 200px;
-            flex-shrink: 1;
+            flex-shrink: 0;
        
         }
         #box3{
