--- a/transform/skew.html
+++ b/transform/skew.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Translate</title>
+    <title>skew</title>
     <style>
         div{
             height: 100px;
@@ -13,7 +13,7 @@
            transition: all 3s ease-in;
         }
         div:hover{
-            transform: translate(200px);
+            transform:skewY(270deg);
             background-color: antiquewhite;
         }
         
