--- a/animation/1index.html
+++ b/animation/1index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>animation1   </title>
     <style>
         div{
             height: 100px;
@@ -14,7 +14,7 @@
             background-color: red;
             border: 1px solid black;
             animation-name: shri;
-            animation-duration: 0.40s;
+            animation-duration: 7s;
             animation-timing-function: ease-in;
             animation-delay: 1s;
             animation-direction: normal;
@@ -23,11 +23,11 @@
         }
         @keyframes shri{
             from{
-                left: 0px;
+                left: 0%;
                 background-color: red;
             }
             to{
-                left: 300px;
+                left: 80%;
                 background-color: aqua;
             }
 
