--- a/transitions/index.html
+++ b/transitions/index.html
@@ -16,6 +16,8 @@
             background-color: red;
             color: lightgoldenrodyellow;
             font-size: 23px;
+            transform: rotate(45deg);
+
         }
         div:active{
             background-color: olivedrab;    
