--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -15,18 +15,17 @@
             display: inline-block;
         }
         #container{
-            width: 700px;
+            width: 1000px;
             height: 300px;
             display: flex;
             flex-direction:row;
-            justify-content:center;
+            justify-content:flex-end;
             /*flex-wrap: wrap;*/
             align-items: self-start;
             /*align-content: center;*/
         }
         #box1{
             background-color: violet;
-            flex-grow: 2;
 
            
         }
@@ -44,6 +43,7 @@
         }
         #box5{
             background-color: brown;
+            flex-wrap: ;
         }
     </style>
 </head>
