--- a/sheryias project 1/index.html
+++ b/sheryias project 1/index.html
@@ -21,9 +21,21 @@
             </div>
             <div id="part3">
                 <button>Log In</button>
-                <button>Sign Up</button>
+                <button id="shri"> Sign Up</button>
             </div>
 
+        </div>
+        <h1>Our Advantages</h1>
+        <img id="img-1" src="https://images.unsplash.com/photo-1604514628550-37477afdf4e3?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW9kZWxzfGVufDB8fDB8fHww" alt="model-1">
+        <img id="img-2" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="model-2">
+        <img id="img-3" src="https://images.unsplash.com/photo-1536291734366-71f75ba1a9db?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D" alt="model-3">
+        <img id="img-4" src="https://plus.unsplash.com/premium_photo-1670176620159-e328887494b1?q=80&w=2186&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="model-4">
+        <h5 id="btm-left">Your Smile, Our Passion </h5>
+        <h5 id="btm-right"> Best Start Up 2024 </h5>
+        <div id="logo-s">
+        <i id="logo-1" class="ri-instagram-line"></i>
+        <i id="logo-2" class="ri-youtube-line"></i>
+        <i id="logo-3" class="ri-facebook-circle-fill"></i>
         </div>
     </div>
 </body>
