--- a/sheryias projesct 2/index.html
+++ b/sheryias projesct 2/index.html
@@ -39,6 +39,15 @@
                 </div>
             </div>
         </div>
+        <div id="work">
+            <div id="work1">
+                <h3>(What I do)</h3>
+                <i class="ri-arrow-right-down-line"></i>
+            </div>
+            <div id="work2">
+                sfdsf
+            </div>
+        </div>
     </div>
 </body>
 
