--- a/sheryias projesct 2/index.html
+++ b/sheryias projesct 2/index.html
@@ -45,7 +45,27 @@
                 <i class="ri-arrow-right-down-line"></i>
             </div>
             <div id="work2">
-                sfdsf
+                <div class="work2-part">
+                    <div class="elem">
+                        <h4>Digital Design</h4>
+                        <P>I create stunning digital designs that engage and inspire your audience. Let me bring your brand to life with my skills.I create stunning digital designs that engage and inspire your audience. Let me bring your brand to life with my skills.</P>
+                    </div>
+                    <div class="elem">
+                        <h4>Art Direction</h4>
+                        <P>My art direction expertise ensures that your project is on brand, on message, and visually stunning. Let's tell your story together.</P>
+                    </div>
+                </div>
+                <div class="work2-part">
+                    <div class="elem">
+                        <h4>Interaction Design</h4>
+                        <P>I specialize in designing intuitive user experiences that are both functional and beautiful.</P>
+                    </div>
+                    <div class="elem">
+                        <h4>Motion Design</h4>
+                        <P>From animated logos to explainer videos, I bring your message to life with visually stunning motion design.</P>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
