--- a/sheryias projesct 2/index.html
+++ b/sheryias projesct 2/index.html
@@ -48,7 +48,7 @@
                 <div class="work2-part">
                     <div class="elem">
                         <h4>Digital Design</h4>
-                        <P>I create stunning digital designs that engage and inspire your audience. Let me bring your brand to life with my skills.I create stunning digital designs that engage and inspire your audience. Let me bring your brand to life with my skills.</P>
+                        <P>I create stunning digital designs that engage and inspire your audience. Let me bring your brand to life with my skills.</P>
                     </div>
                     <div class="elem">
                         <h4>Art Direction</h4>
