--- a/sheryias project 3/index.html
+++ b/sheryias project 3/index.html
@@ -14,7 +14,7 @@
         <div id="nav">
             <div id="nav-part1">
                 <h2>Shree Hotkar</h2>
-                <h3> — Visual & Product Designer <br> based in Bharat </h3>
+                <h3> — Visual & Product Designer <br>    based in Bharat </h3>
             </div>
             <div id="nav-part2">
                 <h4>Work</h4>
@@ -23,7 +23,50 @@
                 <h4>Let's Chat <i class="ri-arrow-right-up-line"></i></h4>
             </div>
         </div>
+        <div id="content">
+            <h3>Hello!  I'm Shree  </h3>
+            <h1>A multidisciplinary designer focusing on digital experiences .</h1>
+        </div>
+        <div id="case">
+            <h4>Case Studies </h4>
+            <div id="right">
+                <div id="line"></div>
+                <h5>01</h5>
+            </div>
+        </div>
+        <div id="projects">
+            <div id="elem">
+                <div id="elem-img">
+                <!-- <img  id="img1" src="https://images.unsplash.com/photo-1500145588304-deb802b4af76?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> -->
+
+                </div>
+                <div class="bottom">
+                    <div class="btm-left">
+                        <h2>Sketch</h2>
+                        <h4>Content Design,Marketing</h4>
+                    </div>
+                    <i class="ri-arrow-right-line"></i>
+                </div>
+            </div>
+            <div id="elem">
+                <div id="elem-img">
+                <!-- <img id="img2" src="https://images.unsplash.com/photo-1707559512313-50007900f431?q=80&w=2175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> -->
+
+                </div>
+                <div class="bottom">
+                    <div class="btm-left">
+                        <h2>Frame.io</h2>
+                        <h4>User Interface Design</h4>
+                    </div>
+                    <i class="ri-arrow-right-line"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
 </html>
+<!-- 
+<img id="img2" src="https://images.unsplash.com/photo-1707559512313-50007900f431?q=80&w=2175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+
+<img  id="img1" src="https://images.unsplash.com/photo-1500145588304-deb802b4af76?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> -->
